--- a/layout.css
+++ b/layout.css
@@ -16,6 +16,8 @@
     width:        95vw;
     box-shadow:   none;
     margin:       auto;
+    padding:      20px 0 25px 0;
+
   }
 }
 
