--- a/missmeme.css
+++ b/missmeme.css
@@ -29,7 +29,6 @@ body {
   width: 100%;
 }
 
-
 small {
   font-family: "mm2";
   font-size: 20px;
@@ -42,7 +41,7 @@ small {
 
 @media (max-width: 610px){
   small{
-    font-size: 13px;
+    font-size: 14px;
     letter-spacing: 0.08em;
   }
 }
